fix(swiper-slide): change visibility prev slide

--- a/src/theme/styles.css
+++ b/src/theme/styles.css
@@ -50,6 +50,12 @@
     background-image: url('/src/assets/icons/right-arrow.svg');
 }
 
+.swiper-slide-visible,
+.swiper-slide-prev, /* Makes previous slide visible */
+.swiper-slide-next {
+    visibility: visible;
+}
+
 /* Глобальные стили для всех scrollbar */
 ::-webkit-scrollbar {
     width: 8px;
